dolphin-deploy-agent/src/yaml/big/06-elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: dolphin-elasticsearch-service
    chart: elasticsearch
    heritage: Helm
    release: elasticsearch
  name: dolphin-elasticsearch-service
  namespace: devops
spec:
  podManagementPolicy: Parallel
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dolphin-elasticsearch-service
  serviceName: dolphin-elasticsearch-service-headless
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dolphin-elasticsearch-service
        chart: elasticsearch
        heritage: Helm
        release: elasticsearch
      name: dolphin-elasticsearch-service
    spec:
      containers:
        - env:
            - name: node.name
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.name
            - name: cluster.initial_master_nodes
              value: dolphin-elasticsearch-service-0,dolphin-elasticsearch-service-1,dolphin-elasticsearch-service-2,
            - name: discovery.seed_hosts
              value: dolphin-elasticsearch-service-headless
            - name: cluster.name
              value: elasticsearch
            - name: network.host
              value: 0.0.0.0
            - name: ES_JAVA_OPTS
              value: -Xmx1g -Xms1g
            - name: node.data
              value: "true"
            - name: node.ingest
              value: "true"
            - name: node.master
              value: "true"
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/elasticsearch:v1
          imagePullPolicy: IfNotPresent
          name: elasticsearch
          ports:
            - containerPort: 9200
              name: http
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |-
                  [...]
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 3
            timeoutSeconds: 5
          resources: {}
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: dolphin-elasticsearch-service
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      terminationGracePeriodSeconds: 120
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        creationTimestamp: null
        name: dolphin-elasticsearch-service
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 200Gi
        volumeMode: Filesystem
        storageClassName: <SC_NAME>

---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: dolphin-elasticsearch-service
    chart: elasticsearch
    heritage: Helm
    release: elasticsearch
  name: dolphin-elasticsearch-service
  namespace: devops
spec:
  ports:
    - name: http
      port: 9200
      protocol: TCP
    - name: transport
      port: 9300
      protocol: TCP
  selector:
    app: dolphin-elasticsearch-service
    chart: elasticsearch
    heritage: Helm
    release: elasticsearch
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app: dolphin-elasticsearch-service
    chart: elasticsearch
    heritage: Helm
    release: elasticsearch
  name: dolphin-elasticsearch-service-headless
  namespace: devops
spec:
  clusterIP: None
  ports:
    - name: http
      port: 9200
    - name: transport
      port: 9300
  publishNotReadyAddresses: true
  selector:
    app: dolphin-elasticsearch-service

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-es
  namespace: devops
  labels:
    app: fluentd-es
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  selector:
    matchLabels:
      app: fluentd-es
  template:
    metadata:
      labels:
        app: fluentd-es
        kubernetes.io/cluster-service: "true"
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      serviceAccountName: fluentd-es
      containers:
        - name: fluentd-es
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/fluentd:v1
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: configur-volume
              mountPath: /etc/fluent/configur.d
      tolerations:
        - operator: Exists
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: configur-volume
          configMap:
            name: dolphin-fluentd-configur
