dolphin-deploy-agent/src/yaml/big/09-skywalking.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: skywalking-oap
  labels:
    chart: skywalking
    component: "oap"
spec:
  type: ClusterIP
  ports:
    - port: 11800
      name: grpc
    - port: 12800
      name: rest
  selector:
    component: "oap"
    chart: skywalking
---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  labels:
    chart: skywalking
    component: "ui"
  name: skywalking-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP

  selector:
    component: "ui"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    chart: skywalking
    component: "oap"
  name: skywalking-oap
  namespace: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      component: "oap"
      chart: skywalking
  template:
    metadata:
      labels:
        component: "oap"
        chart: skywalking
    spec:
      serviceAccountName: skywalking-oap
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    chart: skywalking
                    component: "oap"
      containers:
        - name: oap
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/skywalking-oap-server:v1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: 12800
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 12800
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 11800
              name: grpc
            - containerPort: 12800
              name: rest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-ui
  namespace: devops
  labels:
    chart: skywalking
    component: "ui"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: "ui"
      chart: skywalking
  template:
    metadata:
      labels:
        component: "ui"
        chart: skywalking
    spec:
      affinity:
      containers:
        - name: ui
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/skywalking-ui:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: page
          volumeMounts:
            - mountPath: /skywalking/webapp/webapp.yml
              name: web-configur
              subPath: webapp.yml
      volumes:
        - configMap:
            defaultMode: 420
            name: web-configur
          name: web-configur
