dolphin-deploy-agent/src/yaml/big/10-sonar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dolphin-sonar-service
  namespace: devops
  labels:
    app: dolphin-sonar-service
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dolphin-sonar-service
  template:
    metadata:
      labels:
        app: dolphin-sonar-service
    spec:
      containers:
        - name: dolphin-sonar-service
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/sonar:v2
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
          resources:
            requests:
              cpu: 0.5
              memory: 2048Mi
          volumeMounts:
            - name: dolphin-sonar-service
              mountPath: /bitnami/sonarqube
              subPath: sonarqube-data
      volumes:
        - name: dolphin-sonar-service
          persistentVolumeClaim:
            claimName: dolphin-share-service


---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: dolphin-sonar-service
  labels:
    app: dolphin-sonar-service
spec:
  type: ClusterIP
  selector:
    app: dolphin-sonar-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
