dolphin-deploy-agent/src/yaml/big/13-jenkins.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dolphin-jenkins-service
  namespace: devops
  labels:
    app: dolphin-jenkins-service
spec:
  replicas: 1
  serviceName: dolphin-jenkins-service
  selector:
    matchLabels:
      app: dolphin-jenkins-service
  template:
    metadata:
      labels:
        app: dolphin-jenkins-service
    spec:
      containers:
        - name: dolphin-jenkins-service
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/jenkins:v6
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
          resources:
            requests:
              cpu: 2
              memory: 2Gi
          volumeMounts:
            - name: jenkins-home
              mountPath: /bitnami/jenkins
              subPath: jenkins-data
            - name: command-docker
              mountPath: /usr/local/bin/docker
            - name: command-docker-lock
              mountPath: /var/run/docker.sock
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: dolphin-share-service
        - name: command-docker
          hostPath:
            path: /usr/bin/docker
        - name: command-docker-lock
          hostPath:
            path: /var/run/docker.sock

---
apiVersion: v1
kind: Service
metadata:
  name: dolphin-jenkins-service
  namespace : devops
  labels:
    app: dolphin-jenkins-service
spec:
  type: ClusterIP
  selector:
    app: dolphin-jenkins-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
