dolphin-deploy-agent/src/yaml/big/21-zipkin.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dolphin-zipkin-service
  name: dolphin-zipkin-service
  namespace: devops
spec:
  ports:
    - port: 80
      name: server
      protocol: TCP
      targetPort: 9411
  selector:
    app: dolphin-zipkin-service
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dolphin-zipkin-service
  namespace: devops
  labels:
    name: dolphin-zipkin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dolphin-zipkin-service
  template:
    metadata:
      labels:
        app: dolphin-zipkin-service
    spec:
      containers:
        - name: dolphin-zipkin-service
          image: registry.cn-beijing.aliyuncs.com/aidolphins_com/zipkin:v1
          ports:
            - containerPort: 9411
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
